<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">PSone Memory Manager</string>
    <string name="email" translatable="false">the1andonlydave@gmail.com</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_exit">Press Again to Exit</string>
    <!-- Errors -->
    <string name="nomc">No Card Loaded</string>
    <string name="in_slot" translatable="false">in Slot</string>
    <string name="memory_low">Not enough space on memory.</string>
    <string name="file_ext_error" translatable="false">Missing or Incorrect File Extension</string>
    <!-- File Browser -->
    <string name="file_browser">File Browser</string>
    <string name="up_one_level">  ..  </string>
    <string name="current_dir">.</string>
    <string name="enter_filename">Enter New Filename</string>
    <string name="long_press">Long Press To Select Folder</string>
    <string name="saved_slot">Saved Slot</string>
    <string name="saveid_lic">Save IDs must be unique to License code. Please change it after the copy completes.</string>
    <!-- Action Bar -->
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="orientation_toggle" translatable="false">Toggle Orientation</string>
    <string name="exit">Exit</string>
    <string name="close_app">Closing "@string/app_name"</string>
    <string name="contact_developer">Contact Developer</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="backup_save_sum">Make a backup of the memory card when saving?</string>
    <string name="backup_save_text">Backup on Save</string>
    <string name="convert_save_sum">DexDrive format(.gme) ignores this setting and always converts to preferred type.</string>
    <string name="convert_save_text">Convert to preferred format on save? </string>
    <string name="pref_format_text">Preferred format</string>
    <string name="pref_format_sum">Select the preferred conversion format.</string>
    <string name="mcr" translatable="false">psx4droid(.mcr)</string>
    <string name="mcd" translatable="false">FPSeCe(.mcd)</string>
    <string name="about">About</string>
    <string name="about_text">GitHub fork By: David-Lee Kulsch, based on Code from Topher Lee and neko68k</string>
    <string name="about_sum">Topher Lee und David-Lee Kulsch: basierend auf code von neko68k</string>
    <string name="readme" translatable="false">README</string>
    <string name="readme_link" translatable="false">https://github.com/The1andONLYdave/PSone-Memory-Manager/blob/master/README.md</string>
    <string name="other" translatable="false">Other</string>
    <string name="rate" translatable="false">Rate Application</string>
    <string name="google_play" translatable="false">Google Play™</string>
    <string name="rate_link" translatable="false">market://details?id=com.dlka.psonememorymanager</string>
    <string name="pref_emu">Preferred Emulator</string>
    <string name="retroarch" translatable="false">RetroArch</string>
    <string name="search">Search</string>
    <!-- Card Menu -->
    <string name="edit_details">Edit Details</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="region">Region:</string>
    <string name="save_id">Save ID:</string>
    <string name="prod_id">Product ID:</string>
    <string name="copied">Copied </string>
    <string name="cant_edit_linked_blocks">Cannot edit linked blocks.</string>
    <string name="no_link">Cannot directly delete linked blocks.</string>
    <string name="restore_success">Successfully Restored.</string>
    <string name="restore_failed">Could Not Restore.</string>
    <!-- Region -->
    <string name="america">America</string>
    <string name="japan" translatable="false">Japan</string>
    <string name="europe">Europe</string>
    <string name="empty_block">This Block is Empty.</string>
    <string name="mail">Email us Feedback</string>
    <string name="close_application">Close App</string>
    <string name="long_press_to_select">Long Press To Select Folder</string>
</resources>
