<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_action_new"
        android:title="@string/create" />
    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_action_collection"
        android:title="@string/open" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save" />
    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_action_new_email"
        android:title="@string/feedback" />
    <item
        android:id="@+id/prefs"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/mail"
        android:icon="@drawable/ic_action_about"
        android:title="@string/mail" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/exit" />

</menu>